--- a/index.html
+++ b/index.html
@@ -1,31 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <style>
-    img {
-      background-size: 50%;
-    }
-  </style>
-  <title>ShootMan</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <title>Home</title>
+    <style>
+        body{
+            font-size: 30px;
+        }
+        .container{
+            background-color: rgba(0, 0, 0, 0.384);
+        }
+        img {
+            position:absolute;
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+        }
+        a{
+            color: white;
+        }
+        a:hover{
+            border: 3px solid lightgreen;
+        }
+        .menu{
+            padding-top: 10%;
+        }
+        @media screen and (max-width: 900px){
+            body {
+                font-size: 20px;
+            }
+            /* h2 a {
+                font-size: 20px;
+            } */
+        }
+        @media screen and (max-width: 600px){
+            body {
+                font-size: 15px;
+            }
+            .h1 {
+                margin: auto;
+            }
+            /* h2 a {
+                font-size: 20px;
+            } */
+        }
+    </style>
 </head>
 <body>
-<div class="container DarkFont">
-  <h1 class="text-center">ShootMan</h1>
-  <div class="float-right">Wrong Guesses: <span id='mistakes'>0</span> of <span id='maxWrong'></span></div>
-  <div class="text-center">
-    <img id='hangmanPic' src="img2/0.jpg">
-    <p>Question : <span id="Hint"> </span></p>
-    <p id="wordSpotlight">Taah word ened baina.</p>
-    <div id="keyboard"></div>
-    <button class="btn" onClick="reset()">Reset</button>
-  </div> 
-</div>
-
-<script src='hangman.js'></script>
+    <img src="img2/wannaPlay.gif" alt="wanna play">
+    <div class="container text-center">
+        <div class="menu LightFont">
+            <h1>ShootMan</h1>
+            <h2>
+                <a href="index.html">Play</a>
+            </h2>
+            <h2>
+                <a href="rules.html">How To Play</a>
+            </h2>
+            <h2>
+                <a href="https://www.google.com/">Quit</a>
+            </h2>
+        </div>
+    </div>
 </body>
 </html>
