index.html-iig game.html bolgoj oorchlov(code dotor ni)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="menu LightFont">
             <h1>ShootMan</h1>
             <h2>
-                <a href="index.html">Play</a>
+                <a href="game.html">Play</a>
             </h2>
             <h2>
                 <a href="rules.html">How To Play</a>
