baga saga backgroundnii ym ynzlav.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <title>Home</title>
     <style>
         body{
+            height: 100vh;
             font-size: 30px;
+            background-color: black;
         }
         .container{
             background-color: rgba(0, 0, 0, 0.384);
         }
         img {
+            height: 100vh;
             position:absolute;
             z-index: -1;
             width: 100%;
