--- a/rules.html
+++ b/rules.html
@@ -10,6 +10,7 @@
     <title>Rules</title>
     <style>
         body{
+            height: 100vh;
             color: white;
             text-align: justify;
             text-justify: inter-word;
@@ -21,15 +22,18 @@
             height: 100%;
         }
         .container {
+            height: 100%;
             background-color: rgba(0, 0, 0, 0.575);
         }
-        .container h1 {
+        .hairtsag h1 {
+            font-size: 40px;
+            margin-bottom: 5%;
             margin: 0 19%;
         }
-        .container p {
+        .hairtsag p {
             margin: 1% 19%;
         }
-        .container span {
+        .hairtsag span {
             margin: 0 19%;
         }
         #heart {
@@ -40,6 +44,10 @@
         }
         i{
             color: red;
+        }
+        .hairtsag {
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
